SERVER-23930 Ensure new shard is available in the ShardRegistry after addShard